--- a/skin/frontend/creo/default/style.css
+++ b/skin/frontend/creo/default/style.css
@@ -5527,6 +5527,7 @@ h3.inline-h span:before{
     margin: 0 0.5%;
 }
 #fme_filters_list .cate-open-close .slide li:hover a,.m-selected-ln-item{background: #000;color: #fff;}
+#fme_filters_list .cate-open-close li.m-selected-ln-item a{color:#fff;}
 .m-selected-ln-item{padding:5px 7px !important;}
 .skewbtn1{background:#000;transform: skewX(-30deg);-moz-transform: skewX(-30deg);-ms-transform: skewX(-30deg);
 -webkit-transform: skewX(-30deg);padding:0;display:inline-block;padding:3px 7px;margin-left:5px;float:left;z-index:10;
