--- a/app/design/frontend/creo/default/template/mana/filters/items/standard.phtml
+++ b/app/design/frontend/creo/default/template/mana/filters/items/standard.phtml
@@ -15,6 +15,7 @@
 /* @var $this Mana_Filters_Block_Filter_Attribute */
 ?>
 <?php echo Mage::helper('mana_core')->getNamedHtml('mana_filters/markup', 'before_items', array('block' => $this)) ?>
+<?php /* ?>
 <div class="gender-filter-area">
 <!-- <label class="styles-lable" id="styles_label">Gender: </label> -->
 <dd id="fme_layered_gender" class="m-filter-item-list <?php echo $this->getFilterOptions()->getIsReverse() ? 'm-reverse' : '' ?>">
@@ -37,4 +38,5 @@
 <?php endforeach ?>
 </dd>
 </div>
+<?php */ ?>
 <?php echo Mage::helper('mana_core')->getNamedHtml('mana_filters/markup', 'after_items', array('block' => $this)) ?>
