--- a/app/design/frontend/creo_mobile/default/template/page/html/breadcrumbs.phtml
+++ b/app/design/frontend/creo_mobile/default/template/page/html/breadcrumbs.phtml
@@ -36,7 +36,11 @@
             <?php if($_crumbInfo['link']): ?>
                 <a href="<?php echo $_crumbInfo['link'] ?>" title="<?php echo $this->escapeHtml($_crumbInfo['title']) ?>"><?php echo $this->escapeHtml($_crumbInfo['label']) ?></a>
             <?php elseif($_crumbInfo['last']): ?>
-                <strong><?php echo $this->escapeHtml($_crumbInfo['label']) ?></strong>
+				<?php 
+					$currentUrl = Mage::helper('core/url')->getCurrentUrl();
+					$label = $this->escapeHtml($_crumbInfo['label']);
+				 	echo Mage::helper('functions/data')->updateBreadcrumbs($currentUrl, $label);
+				?>
             <?php else: ?>
                 <?php echo $this->escapeHtml($_crumbInfo['label']) ?>
             <?php endif; ?>
