--- a/skin/frontend/creo/default/custom.css
+++ b/skin/frontend/creo/default/custom.css
@@ -1131,10 +1131,11 @@ cursor: default;
 #options-16-list li input {
     display: none;
 }
+#options-16-list li span.label ( margin:  0 ;)
 #options-16-list li label[for="options_16_2"] {
     height: 38px;
     width: 74px;
-    background: url(http://beta.creoroom.com/skin/frontend/creo/default/images/font1.jpg)no-repeat
+    background: url(http://beta.creoroom.com/skin/frontend/creo/default/images/font1.jpg)no-repeat;
     cursor:pointer;
      background-size:  100%;
      font-size:  0px;
@@ -1143,7 +1144,7 @@ cursor: default;
 #options-16-list li label[for="options_16_3"] {
     height: 38px;
     width: 74px;
-    background: url(http://beta.creoroom.com/skin/frontend/creo/default/images/font2.jpg)no-repeat
+    background: url(http://beta.creoroom.com/skin/frontend/creo/default/images/font2.jpg)no-repeat;
     cursor:pointer;
      background-size:  100%;
      font-size:  0px;
@@ -1151,7 +1152,7 @@ cursor: default;
 #options-16-list li label[for="options_16_4"] {
     height: 38px;
     width: 74px;
-    background: url(http://beta.creoroom.com/skin/frontend/creo/default/images/font3.jpg)no-repeat
+    background: url(http://beta.creoroom.com/skin/frontend/creo/default/images/font3.jpg)no-repeat;
     cursor:pointer;
      background-size:  100%;
      font-size:  0px;
@@ -1159,7 +1160,7 @@ cursor: default;
 #options-16-list li label[for="options_16_5"] {
        height: 38px;
     width: 74px;
-    background: url(http://beta.creoroom.com/skin/frontend/creo/default/images/font4.jpg)no-repeat
+    background: url(http://beta.creoroom.com/skin/frontend/creo/default/images/font4.jpg)no-repeat;
     cursor:pointer;
     background-size:  100%;
     font-size:  0px;
