--- a/app/design/frontend/creo/default/template/mana/filters/items/list.phtml
+++ b/app/design/frontend/creo/default/template/mana/filters/items/list.phtml
@@ -14,7 +14,16 @@
  */
 /* @var $this Mana_Filters_Block_Filter_Attribute */
 ?>
-<?php echo Mage::helper('mana_core')->getNamedHtml('mana_filters/markup', 'before_items', array('block' => $this)); ?>
+<?php echo Mage::helper('mana_core')->getNamedHtml('mana_filters/markup', 'before_items', array('block' => $this)); 
+//echo "<pre>";
+//print_r($this->getFilterOptions()->getData());
+//echo "</pre>";
+if($_REQUEST['custom']){
+	echo "custom";
+}
+			 echo $this->getLayout()->createBlock('cms/block')->setBlockId('thecrazyones')->toHtml();
+?>
+
 <div class="cate-open-close">
 <a id="label_<?php echo str_replace(' ', '_',strtolower($this->getFilterOptions()->name)) ?>" class="opener attribure_labels" data-id="<?php echo str_replace(' ', '_',strtolower($this->getFilterOptions()->name)) ?>">
 <?php $catName= $this->getFilterOptions()->name; ?>
