--- a/skin/frontend/creo_mobile/default/style.css
+++ b/skin/frontend/creo_mobile/default/style.css
@@ -1291,7 +1291,7 @@ animation: animaterotate 1s 1;
 .skewbtn1{background:#000;padding:0;display:block;padding:3px 7px;margin:10px auto;width: 250px;text-align:center;}
 .skewbtn1 #goback{color: #fff;background-color:#000;font-size:12px;text-transform:uppercase;border:0;outline:none;line-height:1.2;}
 .skewbtn1:hover,.skewbtn1:hover #goback,.skewbtn1:focus,.skewbtn1:focus #goback{background-color:#ef4f61}
-.size_guide_men_image, .size_guide_women_image { max-width: 500px; width: 100%;}
+.size_guide_men_image, .size_guide_women_image{max-width:100%;width: 100%;}
 .cate-open-close .opener{display:block;vertical-align: middle;padding:1px 20px 1px 8px;margin:2px 0;position: relative;
 color: #222;text-transform: uppercase;font: 13px/20px "Roboto Condensed", Helvetica, Arial, sans-serif;border: 1px solid #ccc;
 width:100%;cursor:pointer;}
