--- a/app/design/frontend/creo_mobile/default/template/extensions/collections/categories.phtml
+++ b/app/design/frontend/creo_mobile/default/template/extensions/collections/categories.phtml
@@ -31,6 +31,16 @@
  * @see Mage_Catalog_Block_Product_List
  */
 ?>
+<div class="row">
+<div class="col-xs-12">
+<nav class="breadcrumb1">
+    <ul>
+        <li class="home"><a title="Go to Home Page" href="<?php echo Mage::getBaseUrl(); ?>">Home</a></li>
+        <li class="category17"><strong>Collections</strong></li>
+    </ul>
+</nav>
+</div>
+</div>
 <?php $_attrbiuteCollection = $this->getLoadedAttributeCollection(); ?>
 <div class="cate-drop-holder" id="fme_filters_list">
 <button id="goback" onclick="goback()" title="Back">Back</button>
