--- a/app/design/frontend/creo_mobile/default/template/extensions/sellers/trending.phtml
+++ b/app/design/frontend/creo_mobile/default/template/extensions/sellers/trending.phtml
@@ -32,10 +32,28 @@
  */
 ?>
 <?php
+/**
+ * Product list template
+ *
+ * @see Mage_Catalog_Block_Product_List
+ */
+?>
+<?php
 $_productCollection = $this->getLoadedProductCollection();
 $_helper = $this->helper('catalog/output');
+$currentCat = $_productCollection->getFirstItem()->cat_name;
 ?>
-
+<div class="row">
+<div class="col-xs-12">
+<nav class="breadcrumb1">
+    <ul>
+        <li class="home"><a title="Go to Home Page" href="<?php echo Mage::getBaseUrl(); ?>">Home</a></li>
+        <li class="category3"><a title="Collections" href="<?php echo Mage::getBaseUrl() . strtolower($currentCat) . ".html" ?>"><?php echo $currentCat ?></a></li>
+        <li class="category17"><strong>Trending</strong></li>
+    </ul>
+</nav>
+</div>
+</div>
 <?php if (!$_productCollection->count()): ?>
     <p class="note-msg"><?php echo $this->__('There are no products matching the selection.') ?></p>
 <?php else: ?>
