--- a/skin/frontend/creo/default/style.css
+++ b/skin/frontend/creo/default/style.css
@@ -5549,7 +5549,7 @@ transform: skewX(30deg);-moz-transform: skewX(30deg);-ms-transform: skewX(30deg)
 .size_guide_men_image, .size_guide_women_image { max-width: 500px; width: 100%;}
 #product-options-wrapper dl dt:nth-child(3),#product-options-wrapper dl dd:nth-child(4),#product-options-wrapper dl dt:nth-child(5),
 #product-options-wrapper dl dd:nth-child(6){display:inline-block;width:auto;vertical-align:top;padding:3px;}
-
+#options-16-list label{box-shadow:3px 3px 5px rgba(170, 170, 170, 0.58);}
 @media only screen and (max-width: 1199px) {
 	#nav ol{font-size: 13px;}
 	.search-form{width: 130px;}
