--- a/skin/frontend/creo/default/style.css
+++ b/skin/frontend/creo/default/style.css
@@ -5544,7 +5544,7 @@ transform: skewX(30deg);-moz-transform: skewX(30deg);-ms-transform: skewX(30deg)
 #fme_filters_list .cate-open-close #label_gender{border:0;}
 #fme_filters_list .cate-open-close #label_gender.opener:before{content:':';border:0;top:0;}
 /*#fme_filters_list .cate-open-close:hover ul{display: block;}*/
-#fme_filters_list .cate-open-close .slide li{width:32.3%;margin:0 0.5%;}
+/*#fme_filters_list .cate-open-close .slide li{width:32.3%;margin:0 0.5%;}*/
 #fme_filters_list .cate-open-close .slide li:hover a{background: #000;color: #fff;}
 .size_guide_men_image, .size_guide_women_image { max-width: 500px; width: 100%;}
 #product-options-wrapper dl dt:nth-child(3),#product-options-wrapper dl dd:nth-child(4),#product-options-wrapper dl dt:nth-child(5),
