--- a/app/design/frontend/creo/default/template/extensions/collections/categories.phtml
+++ b/app/design/frontend/creo/default/template/extensions/collections/categories.phtml
@@ -44,12 +44,12 @@
 <?php
 $_attrbiuteCollection = $this->getLoadedAttributeCollection();
 ?>
-<div class="cate-drop-holder">
-<button id="goback" onclick="goback()" title="Back">Back</button>
+<div class="cate-drop-holder" id="fme_filters_list">
+<div class="skewbtn1"><button id="goback" onclick="goback()" title="Back">Back</button></div>
 <span class="search-by">Search By Design</span>
-<div class="cate-drop-frame">
-<a href="javascript:;" class="opener"> View All</a>
-<ul>
+<div class="cate-open-close">
+<a class="opener attribure_labels" data-id="collection-mega-menu"> View All</a>
+<ul id="collection-mega-menu" class="slide m-filter-item-list">
     <?php foreach ($_attrbiuteCollection as $a): ?>
         <li>
             <?php if ($a['value']): ?>
