--- a/skin/frontend/creo/default/style.css
+++ b/skin/frontend/creo/default/style.css
@@ -5419,7 +5419,7 @@ dl {margin: 0 0 10px;}
     text-transform: uppercase;
     width: 130px;
 }
-.cate-drop-holder .cate-drop-frame:hover ul{display: block;}
+/*.cate-drop-holder .cate-drop-frame:hover ul{display: block;}*/
 .cate-drop-holder .cate-drop-frame:hover ul a{
     border-top: 1px solid #ccc;
     color: #222;
@@ -5540,8 +5540,8 @@ transform: skewX(30deg);-moz-transform: skewX(30deg);-ms-transform: skewX(30deg)
 #gender li a{transform: skewX(18deg);-moz-transform: skewX(18deg);-webkit-transform: skewX(18deg);
 -ms-transform: skewX(18deg);padding:0 !important;}
 #gender li:hover a{background-color:transparent !important;}
-#gender li:hover{background-color:#000;}
-#fme_filters_list .cate-open-close #label_gender{border:0;}
+#gender li:hover,#gender li.m-selected-ln-item{background-color:#000;border:1px solid transparent;}
+#fme_filters_list .cate-open-close #label_gender{border:0;cursor:none;pointer-events:none;}
 #fme_filters_list .cate-open-close #label_gender.opener:before{content:':';border:0;top:0;}
 /*#fme_filters_list .cate-open-close:hover ul{display: block;}*/
 /*#fme_filters_list .cate-open-close .slide li{width:32.3%;margin:0 0.5%;}*/
