--- a/app/design/frontend/creo_mobile/default/template/extensions/collections/men.phtml
+++ b/app/design/frontend/creo_mobile/default/template/extensions/collections/men.phtml
@@ -38,12 +38,12 @@
 <?php
 $_attrbiuteCollection = $this->getLoadedAttributeCollection();
 ?>
-<div class="cate-drop-holder" id="fme_filters_list">
+<div class="category_top_filters cate-links" >
 <div class="skewbtn1"><button id="goback" onclick="goback()" title="Back">Back</button></div>
 <span class="search-by">Search By Design</span>
 <div class="cate-open-close">
-<a href="javascript:;" class="opener"> View All</a>
-<ul class="slide" id="fme_layered_universal_categories">
+<a class="opener attribure_labels" data-id="collection-mega-menu"> View All</a>
+<ul id="collection-mega-menu" class="slide m-filter-item-list">
     <?php foreach ($_attrbiuteCollection as $a): ?>
         <li>
             <?php if ($a['value']): ?>
