--- a/skin/frontend/creo_mobile/default/style.css
+++ b/skin/frontend/creo_mobile/default/style.css
@@ -998,7 +998,7 @@ display: none;
 #fme_filters_list .cate-open-close.active .opener, #fme_filters_list .cate-open-close:hover .opener { text-decoration: none; }
 #fme_filters_list .cate-open-close .opener:before { width: 9px; height: 19px; position: absolute; top: 8px; right: 5px; border-color: #888 transparent transparent; border-style: solid; border-width: 5px 4px 0; content: ''; }
 #fme_filters_list .cate-open-close ul:before { bottom: 100%; content: ""; height: 2px; left: 0; position: absolute; right: 0; }
-#fme_filters_list .cate-open-close:hover ul { display: block; }
+/*#fme_filters_list .cate-open-close:hover ul { display: block; }*/
 #fme_filters_list .cate-open-close ul { margin: -1px 0 0; padding: 0; list-style: none; background: #fff; position: absolute; text-transform: uppercase; border: 1px solid #ccc; font: 13px/18px "Roboto Condensed", Helvetica, Arial, sans-serif; display: none; left: auto; right: 0; width: 130px; }
 #fme_filters_list .cate-open-close .slide li { display: block; padding: 0; }
 #fme_filters_list .cate-open-close li a { display: block; color: #222; padding: 5px 7px !important; border-top: 1px solid #ccc; }
@@ -1288,7 +1288,7 @@ animation: animaterotate 1s 1;
 .showShippingAddress label,.address-book-area label{margin:1px 5px 0 10px !important;float: none !important;}
 .showShippingAddress input,.address-book-area input{display: inline-block;}
 .fme_loading_filters img{margin-left:-48px;}
-.skewbtn1{background:#000;padding:0;display:block;padding:3px 7px;margin:10px auto;width: 250px;text-align:center;}
+.skewbtn1{background:#000;padding:0;display:block;padding:3px 7px;margin:10px auto;/*width: 250px;*/text-align:center;}
 .skewbtn1 #goback{color: #fff;background-color:#000;font-size:12px;text-transform:uppercase;border:0;outline:none;line-height:1.2;}
 .skewbtn1:hover,.skewbtn1:hover #goback,.skewbtn1:focus,.skewbtn1:focus #goback{background-color:#ef4f61}
 .size_guide_men_image, .size_guide_women_image{max-width:100%;width: 100%;}
@@ -1300,12 +1300,12 @@ border-style: solid;border-width: 5px 4px 0;content: '';}
 .cate-open-close ul{background: #fff;border-color: #eee #eee #f16a79;border-style: solid;border-width: 1px 1px 5px;display: none;
 left:0;margin:0;padding:0;position:relative;right: 0;top: auto;width:100%;z-index: 999;}
 /*.cate-open-close .opener:hover + .slide.m-filter-item-list{display:block;}*/
-.cate-open-close .slide.m-filter-item-list li{display:block;text-align:center;border-top:1px solid #eee;line-height:2;}
-.cate-open-close .slide.m-filter-item-list li a{font-size:12px;}
+.cate-open-close .slide.m-filter-item-list li{display:inline-block;text-align:center;border-top:1px solid #eee;line-height:2;width:49%;}
+.cate-open-close .slide.m-filter-item-list li a{font-size:14px;}
 .cate-open-close .slide.m-filter-item-list li:first-child{border:0;}
 .cate-open-close .slide.m-filter-item-list li.m-selected-ln-item{background-color:#000;color:#fff;}
 .cate-open-close .slide.m-filter-item-list li.m-selected-ln-item a{color:#fff;}
-#label_gender{display:none;}
+/*#label_gender,#label_tshirt_color{display:none;}*/
 .size_guide_men_image, .size_guide_women_image{max-width:100%;width: 100%;}
 /* RESPONSIVE EXAMPLE */
 .stacktable.large-only{display:table;}
