--- a/app/design/frontend/creo/default/template/page/filters.phtml
+++ b/app/design/frontend/creo/default/template/page/filters.phtml
@@ -52,7 +52,7 @@
                 <?php echo $this->getChildHtml('breadcrumbs') ?>
                 <?php if ($_leftContent = $this->getChildHtml('left_first')): ?>
                 <div class="category_top_filters cate-links" id="fme_filters_list">
-                <span id="styles_label" class="search-by">Search by Design</span>
+                <!-- <span id="styles_label" class="search-by">Search by Design</span> -->
                 <?php echo $_leftContent;   ?>
                 </div>
                 <?php endif; ?>
