--- a/skin/frontend/creo_mobile/default/style.css
+++ b/skin/frontend/creo_mobile/default/style.css
@@ -1307,6 +1307,7 @@ left:0;margin:0;padding:0;position:relative;right: 0;top: auto;width:100%;z-inde
 .cate-open-close .slide.m-filter-item-list li.m-selected-ln-item a{color:#fff;}
 /*#label_gender,#label_tshirt_color{display:none;}*/
 .size_guide_men_image, .size_guide_women_image{max-width:100%;width: 100%;}
+#options-16-list label{box-shadow:3px 3px 5px rgba(170, 170, 170, 0.58);}
 /* RESPONSIVE EXAMPLE */
 .stacktable.large-only{display:table;}
 .stacktable.small-only{display:none;}
