--- a/app/design/frontend/creo_mobile/default/template/mana/filters/items/list.phtml
+++ b/app/design/frontend/creo_mobile/default/template/mana/filters/items/list.phtml
@@ -15,9 +15,19 @@
 /* @var $this Mana_Filters_Block_Filter_Attribute */
 ?>
 <?php echo Mage::helper('mana_core')->getNamedHtml('mana_filters/markup', 'before_items', array('block' => $this)); ?>
-<div class="cate-open-close">
-<!-- <span id="styles_label" class="search-by">Search by Design</span> -->
-<a id="label_<?php echo str_replace(' ', '_',strtolower($this->getFilterOptions()->name)) ?>" class="opener attribure_labels" data-id="<?php echo str_replace(' ', '_',strtolower($this->getFilterOptions()->name)) ?>">
+<?php
+$labels = str_replace(' ', '_',strtolower($this->getFilterOptions()->name));
+$currentUrl = Mage::helper('core/url')->getCurrentUrl();
+?>
+<div class="cate-open-close label_<?php echo str_replace(' ', '_',strtolower($this->getFilterOptions()->name)) ?>">
+<?php 
+if($labels == 'design_category'){
+	if(strpos($currentUrl,'custom') !== false){
+		echo $this->getLayout()->createBlock('cms/block')->setBlockId('thecrazyones')->toHtml();
+	}else{
+	?>
+	<span id="styles_label" class="search-by label_<?php echo str_replace(' ', '_',strtolower($this->getFilterOptions()->name)) ?>">Search by Design</span>
+	<a id="label_<?php echo str_replace(' ', '_',strtolower($this->getFilterOptions()->name)) ?>" class="opener attribure_labels" data-id="<?php echo str_replace(' ', '_',strtolower($this->getFilterOptions()->name)) ?>">
 <?php $catName= $this->getFilterOptions()->name; ?>
 <?php foreach ($this->getItems() as $_item): ?>
         <?php // MANA BEGIN ?>
@@ -27,8 +37,55 @@
         <?php endif; ?>
 <?php endforeach ?>
 <?php
-$labels = str_replace(' ', '_',strtolower($this->getFilterOptions()->name));
+if($labels == 'design_category'){$catName = 'View All';}
 ?>
+<?php if ($catName=='true' || $selectedItem == '') {
+    echo $catName;
+    } elseif($labels=='design_category' && $selectedItem != '') { ?>
+    <span class="m-selected-filter-item"><?php echo $selectedItem; ?></span>
+<?php } else{ echo $catName; } ?>
+</a>
+		<ul id="<?php echo $labels; ?>" class="slide m-filter-item-list <?php echo $this->getFilterOptions()->getIsReverse() ? 'm-reverse' : '' ?>">
+	<?php
+	if($labels == 'design_category'){
+	?>
+	<li><a href="<?php echo $this->urlEscape($_item->getRemoveUrl()) ?>" title="View All">View All</a>
+	</li>
+	<?php
+	}
+	?>
+	<?php foreach ($this->getItems() as $_item): ?>
+		<li <?php if ($_item->getMShowSelected()): ?>class="m-selected-ln-item"<?php endif; ?>>
+			<?php // MANA BEGIN ?>
+			<?php if ($_item->getMSelected()): ?>
+				<a href="<?php echo $this->urlEscape($_item->getRemoveUrl()) ?>" title="<?php echo $this->escapeHtml($_item->getLabel()) ?>"><?php echo $this->escapeHtml($_item->getLabel()) ?></a>
+			<?php else : ?>
+				<?php if (!$this->getFilterOptions()->getDisableNoResultOptions() || $_item->getCount() > 0 || $_item->getMSelected()): ?>
+				<a href="<?php echo $this->urlEscape($_item->getUrl()) ?>" title="<?php echo $this->escapeHtml($_item->getLabel()) ?>"><?php echo $this->escapeHtml($_item->getLabel()) ?></a>
+				<?php else: echo $this->escapeHtml($_item->getLabel()) ?>
+				<?php endif; ?>
+			<?php endif; ?>
+			<?php // MANA END ?>
+			<?php if (Mage::getStoreConfigFlag('mana_filters/display/count')) : ?>
+				<!-- (<?php //echo $_item->getCount() ?>) -->
+			<?php endif; ?>
+		</li>
+	<?php endforeach ?>
+	</ul>
+	<?php
+	}
+}elseif($labels == 'gender'){
+	if(strpos($currentUrl,'men') !== false){}else{
+	?>
+	    <a id="label_<?php echo str_replace(' ', '_',strtolower($this->getFilterOptions()->name)) ?>" class="opener attribure_labels" data-id="<?php echo str_replace(' ', '_',strtolower($this->getFilterOptions()->name)) ?>">
+<?php $catName= $this->getFilterOptions()->name; ?>
+<?php foreach ($this->getItems() as $_item): ?>
+        <?php // MANA BEGIN ?>
+        <?php if ($_item->getMSelected()): ?>
+            <?php $selectedItem = $this->escapeHtml($_item->getLabel()) ?>
+        <?php // MANA END ?>
+        <?php endif; ?>
+<?php endforeach ?>
 <?php
 if($labels == 'design_category'){$catName = 'View All';}
 ?>
@@ -38,7 +95,56 @@ if($labels == 'design_category'){$catName = 'View All';}
     <span class="m-selected-filter-item"><?php echo $selectedItem; ?></span>
 <?php } else{ echo $catName; } ?>
 </a>
-<ul id="<?php echo $labels; ?>" class="slide m-filter-item-list <?php echo $this->getFilterOptions()->getIsReverse() ? 'm-reverse' : '' ?>">
+		<ul id="<?php echo $labels; ?>" class="slide m-filter-item-list <?php echo $this->getFilterOptions()->getIsReverse() ? 'm-reverse' : '' ?>">
+	<?php
+	if($labels == 'design_category'){
+	?>
+	<li><a href="<?php echo $this->urlEscape($_item->getRemoveUrl()) ?>" title="View All">View All</a>
+	</li>
+	<?php
+	}
+	?>
+	<?php foreach ($this->getItems() as $_item): ?>
+		<li <?php if ($_item->getMShowSelected()): ?>class="m-selected-ln-item"<?php endif; ?>>
+			<?php // MANA BEGIN ?>
+			<?php if ($_item->getMSelected()): ?>
+				<a href="<?php echo $this->urlEscape($_item->getRemoveUrl()) ?>" title="<?php echo $this->escapeHtml($_item->getLabel()) ?>"><?php echo $this->escapeHtml($_item->getLabel()) ?></a>
+			<?php else : ?>
+				<?php if (!$this->getFilterOptions()->getDisableNoResultOptions() || $_item->getCount() > 0 || $_item->getMSelected()): ?>
+				<a href="<?php echo $this->urlEscape($_item->getUrl()) ?>" title="<?php echo $this->escapeHtml($_item->getLabel()) ?>"><?php echo $this->escapeHtml($_item->getLabel()) ?></a>
+				<?php else: echo $this->escapeHtml($_item->getLabel()) ?>
+				<?php endif; ?>
+			<?php endif; ?>
+			<?php // MANA END ?>
+			<?php if (Mage::getStoreConfigFlag('mana_filters/display/count')) : ?>
+				<!-- (<?php //echo $_item->getCount() ?>) -->
+			<?php endif; ?>
+		</li>
+	<?php endforeach ?>
+	</ul>
+	<?php
+	}
+}elseif( $labels !== 'gender' && $labels !== 'design_category' ){
+?>
+    <a id="label_<?php echo str_replace(' ', '_',strtolower($this->getFilterOptions()->name)) ?>" class="opener attribure_labels" data-id="<?php echo str_replace(' ', '_',strtolower($this->getFilterOptions()->name)) ?>">
+<?php $catName= $this->getFilterOptions()->name; ?>
+<?php foreach ($this->getItems() as $_item): ?>
+        <?php // MANA BEGIN ?>
+        <?php if ($_item->getMSelected()): ?>
+            <?php $selectedItem = $this->escapeHtml($_item->getLabel()) ?>
+        <?php // MANA END ?>
+        <?php endif; ?>
+<?php endforeach ?>
+<?php
+if($labels == 'design_category'){$catName = 'View All';}
+?>
+<?php if ($catName=='true' || $selectedItem == '') {
+    echo $catName;
+    } elseif($labels=='design_category' && $selectedItem != '') { ?>
+    <span class="m-selected-filter-item"><?php echo $selectedItem; ?></span>
+<?php } else{ echo $catName; } ?>
+</a>
+	<ul id="<?php echo $labels; ?>" class="slide m-filter-item-list <?php echo $this->getFilterOptions()->getIsReverse() ? 'm-reverse' : '' ?>">
 <?php
 if($labels == 'design_category'){
 ?>
@@ -65,5 +171,8 @@ if($labels == 'design_category'){
     </li>
 <?php endforeach ?>
 </ul>
+<?php
+}
+?>
 </div>
 <?php echo Mage::helper('mana_core')->getNamedHtml('mana_filters/markup', 'after_items', array('block' => $this)) ?>
