breadcrumbs for trending and new category

--- a/app/design/frontend/creo_mobile/default/template/extensions/sellers/trending.phtml
+++ b/app/design/frontend/creo_mobile/default/template/extensions/sellers/trending.phtml
@@ -39,6 +39,7 @@
  */
 ?>
 <?php
+$_categoryLabel = $this->getCategoryLabel();
 $_productCollection = $this->getLoadedProductCollection();
 $_helper = $this->helper('catalog/output');
 $currentCat = $_productCollection->getFirstItem()->cat_name;
@@ -48,7 +49,7 @@ $currentCat = $_productCollection->getFirstItem()->cat_name;
 <nav class="breadcrumb1">
     <ul>
         <li class="home"><a title="Go to Home Page" href="<?php echo Mage::getBaseUrl(); ?>">Home</a></li>
-        <li class="category3"><a title="Collections" href="<?php echo Mage::getBaseUrl() . strtolower($currentCat) . ".html" ?>"><?php echo $currentCat ?></a></li>
+        <li class="category3"><a title="Collections" href="<?php echo Mage::getBaseUrl() . strtolower($_categoryLabel) . ".html" ?>"><?php echo $_categoryLabel ?></a></li>
         <li class="category17"><strong>Trending</strong></li>
     </ul>
 </nav>
