breadcrumbs for trending and new category

--- a/app/design/frontend/creo/default/template/page/html/topmenu/renderer.phtml
+++ b/app/design/frontend/creo/default/template/page/html/topmenu/renderer.phtml
@@ -193,9 +193,9 @@
            
             <div class="links-frame">
                 <ul class="sorting-items">
-                    <li><a href="<?php echo Mage::getBaseUrl() . "sellers/index/trending/?id=3" ?>">Trending</a></li>
-                    <li><a href="<?php echo Mage::getBaseUrl() . "sellers/index/bestseller/?id=3" ?>">Best Seller</a></li>
-                    <li><a href="<?php echo Mage::getBaseUrl() . "sellers/index/newcollection/?id=3" ?>">NEW</a></li>
+                    <li><a href="<?php echo Mage::getBaseUrl() . "sellers/index/trending?id=3" ?>">Trending</a></li>
+                    <li><a href="<?php echo Mage::getBaseUrl() . "sellers/index/bestseller?id=3" ?>">Best Seller</a></li>
+                    <li><a href="<?php echo Mage::getBaseUrl() . "sellers/index/newcollection?id=3" ?>">NEW</a></li>
 
                 </ul>
 
@@ -266,9 +266,9 @@ endforeach;
         <div class="links-area">
             <div class="links-frame">
                 <ul class="sorting-items">
-                    <li><a href="<?php echo Mage::getBaseUrl() . "sellers/index/trending/?id=5" ?>">Trending</a></li>
-                    <li><a href="<?php echo Mage::getBaseUrl() . "sellers/index/bestseller/?id=5" ?>">Best Seller</a></li>
-                    <li><a href="<?php echo Mage::getBaseUrl() . "sellers/index/newcollection/?id=5" ?>">NEW</a></li>
+                    <li><a href="<?php echo Mage::getBaseUrl() . "sellers/index/trending?id=5" ?>">Trending</a></li>
+                    <li><a href="<?php echo Mage::getBaseUrl() . "sellers/index/bestseller?id=5" ?>">Best Seller</a></li>
+                    <li><a href="<?php echo Mage::getBaseUrl() . "sellers/index/newcollection?id=5" ?>">NEW</a></li>
 
                 </ul>
                 <ul class="links">
@@ -312,9 +312,9 @@ endforeach;
         <div class="links-area">
             <div class="links-frame">
                 <ul class="sorting-items">
-                    <li><a href="<?php echo Mage::getBaseUrl() . "sellers/index/trending/?id=54" ?>">Trending</a></li>
-                    <li><a href="<?php echo Mage::getBaseUrl() . "sellers/index/bestseller/?id=54" ?>">Best Seller</a></li>
-                    <li><a href="<?php echo Mage::getBaseUrl() . "sellers/index/newcollection/?id=54" ?>">NEW</a></li>
+                    <li><a href="<?php echo Mage::getBaseUrl() . "sellers/index/trending?id=54" ?>">Trending</a></li>
+                    <li><a href="<?php echo Mage::getBaseUrl() . "sellers/index/bestseller?id=54" ?>">Best Seller</a></li>
+                    <li><a href="<?php echo Mage::getBaseUrl() . "sellers/index/newcollection?id=54" ?>">NEW</a></li>
 
                 </ul>
                 <ul class="links">
