--- a/app/design/frontend/creo_mobile/default/template/page/html/topmenu/renderer.phtml
+++ b/app/design/frontend/creo_mobile/default/template/page/html/topmenu/renderer.phtml
@@ -192,9 +192,9 @@
            
             <div class="links-frame">
                 <ul class="sorting-items">
-                    <li><a href="<?php echo Mage::getBaseUrl() . "sellers/index/trending/?id=3" ?>">Trending</a></li>
-                    <li><a href="<?php echo Mage::getBaseUrl() . "sellers/index/bestseller/?id=3" ?>">Best Seller</a></li>
-                    <li><a href="<?php echo Mage::getBaseUrl() . "sellers/index/newcollection/?id=3" ?>">NEW</a></li>
+                    <li><a href="<?php echo Mage::getBaseUrl() . "sellers/index/trending?id=3" ?>">Trending</a></li>
+                    <li><a href="<?php echo Mage::getBaseUrl() . "sellers/index/bestseller?id=3" ?>">Best Seller</a></li>
+                    <li><a href="<?php echo Mage::getBaseUrl() . "sellers/index/newcollection?id=3" ?>">NEW</a></li>
 
                 </ul>
 
@@ -233,9 +233,9 @@ endforeach;
            
             <div class="links-frame">
                 <ul class="sorting-items">
-                    <li><a href="<?php echo Mage::getBaseUrl() . "sellers/index/trending/?id=5" ?>">Trending</a></li>
-                    <li><a href="<?php echo Mage::getBaseUrl() . "sellers/index/bestseller/?id=5" ?>">Best Seller</a></li>
-                    <li><a href="<?php echo Mage::getBaseUrl() . "sellers/index/newcollection/?id=5" ?>">NEW</a></li>
+                    <li><a href="<?php echo Mage::getBaseUrl() . "sellers/index/trending?id=5" ?>">Trending</a></li>
+                    <li><a href="<?php echo Mage::getBaseUrl() . "sellers/index/bestseller?id=5" ?>">Best Seller</a></li>
+                    <li><a href="<?php echo Mage::getBaseUrl() . "sellers/index/newcollection?id=5" ?>">NEW</a></li>
 
                 </ul>
                 <ul class="links">
@@ -265,9 +265,9 @@ endforeach;
            
             <div class="links-frame">
                 <ul class="sorting-items">
-                    <li><a href="<?php echo Mage::getBaseUrl() . "sellers/index/trending/?id=54" ?>">Trending</a></li>
-                    <li><a href="<?php echo Mage::getBaseUrl() . "sellers/index/bestseller/?id=54" ?>">Best Seller</a></li>
-                    <li><a href="<?php echo Mage::getBaseUrl() . "sellers/index/newcollection/?id=54" ?>">NEW</a></li>
+                    <li><a href="<?php echo Mage::getBaseUrl() . "sellers/index/trending?id=54" ?>">Trending</a></li>
+                    <li><a href="<?php echo Mage::getBaseUrl() . "sellers/index/bestseller?id=54" ?>">Best Seller</a></li>
+                    <li><a href="<?php echo Mage::getBaseUrl() . "sellers/index/newcollection?id=54" ?>">NEW</a></li>
 
                 </ul>
                 <ul class="links">
@@ -320,9 +320,9 @@ endforeach;
            
             <div class="links-frame">
                 <ul class="sorting-items">
-                    <li><a href="<?php echo Mage::getBaseUrl() . "extension/index/trending/?id=6" ?>">Trending</a></li>
-                    <li><a href="<?php echo Mage::getBaseUrl() . "extension/index/seller/?id=6" ?>">Best Seller</a></li>
-                    <li><a href="<?php echo Mage::getBaseUrl() . "extension/index/new/?id=6" ?>">NEW</a></li>
+                    <li><a href="<?php echo Mage::getBaseUrl() . "extension/index/trending?id=6" ?>">Trending</a></li>
+                    <li><a href="<?php echo Mage::getBaseUrl() . "extension/index/seller?id=6" ?>">Best Seller</a></li>
+                    <li><a href="<?php echo Mage::getBaseUrl() . "extension/index/new?id=6" ?>">NEW</a></li>
 
                 </ul>
                 <ul class="links">
