--- a/skin/frontend/creo/default/style.css
+++ b/skin/frontend/creo/default/style.css
@@ -436,7 +436,8 @@ p.style1 {
 }
 #nav ol > li {
 	float: left;
-	margin: 0 5px 0 0;
+	margin: 0 0px 0 0;
+	padding-right:5px;
 }
 #nav ol > li > a {
 	display: block;
