back button on category and collection page

--- a/app/design/frontend/creo/default/template/extensions/collections/men.phtml
+++ b/app/design/frontend/creo/default/template/extensions/collections/men.phtml
@@ -46,7 +46,10 @@
 $_attrbiuteCollection = $this->getLoadedAttributeCollection();
 ?>
 <div class="cate-drop-holder" id="fme_filters_list">
-<div class="skewbtn1"><button id="goback" onclick="goback()" title="Back">Back</button></div>
+<?php
+$currentUrl = Mage::helper('core/url')->getCurrentUrl();
+echo Mage::helper('functions/data')->getCollectionParentLink($currentUrl);
+?>
 <div class="cate-open-close">
 <span class="search-by">Search By Design</span>
 <a class="opener attribure_labels" data-id="collection-mega-menu"> View All</a>
