--- a/app/design/frontend/creo_mobile/default/template/extensions/collections/men.phtml
+++ b/app/design/frontend/creo_mobile/default/template/extensions/collections/men.phtml
@@ -39,7 +39,10 @@
 $_attrbiuteCollection = $this->getLoadedAttributeCollection();
 ?>
 <div class="category_top_filters cate-links" >
-<div class="skewbtn1"><button id="goback" onclick="goback()" title="Back">Back</button></div>
+<?php
+$currentUrl = Mage::helper('core/url')->getCurrentUrl();
+echo Mage::helper('functions/data')->getCollectionParentLink($currentUrl);
+?>
 <span class="search-by">Search By Design</span>
 <div class="cate-open-close">
 <a class="opener attribure_labels" data-id="collection-mega-menu"> View All</a>
